fixed the image src url

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <div>
             <a href="index.html">
-                <img src="book_af_logo.png" alt="" class="bookaf-logo">
+                <img src="images/book_af_logo.png" alt="" class="bookaf-logo">
             </a>
             <a class="nav-items" href="#">Home</a>
             <div class="dropdown">
@@ -40,7 +40,7 @@
         <section class="book-box">
             <span class="temp-title">Title</span>
             <span class="book-name">Think and Grow Rich</span>
-            <img class="book-cover" src="book_cover.webp" width="170" height="200">
+            <img class="book-cover" src="images/book_af_logo.png" width="170" height="200">
             <a class="buy-btn" href="#" alt="buy link">Buy Now</a>
         </section>
     </div>
