removed json old functions

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </div>
     <div id="books" class="books-container">
       <section class="book-box">
-        <span class="temp-title">Title</span>
-        <span class="book-name">Think and Grow Rich</span>
+        <span class="temp-title"></span>
+        <span class="book-name"></span>
         <img
           class="book-cover"
-          src="images/book_af_logo.png"
+          src=""
           width="170"
           height="200"
         />
