fixed dropdown container

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </a>
         <a class="nav-items" href="#">Home</a>
         <div class="dropdown">
-          <button class="nav-items">Category</button>
-          <div id="dropContent" class="dropdown-content">
+          <button id="showDrop" class="nav-items">Category</button>
+          <div id="dropContent" class=" dropdown-content hide">
             <span class="drop">Growth</span>
             <span class="drop">Income</span>
             <span class="drop">Fitness</span>
