added contact us

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <a class="nav-items hide" href="#">About Us</a>
-        <a class="nav-items" href="#">Contact Us</a>
+        <a class="nav-items" href="mailto:omc0784@gmail.com">Contact Us</a>
       </div>
       <hr />
     </nav>
